--- a/views/success.hbs
+++ b/views/success.hbs
@@ -22,6 +22,9 @@
       </div>
       <div class="col-md-4"></div>
     </div>
+    <script type="text/javascript">
+       window.location.replace({{appLink}});
+    </script>
   </div>
 </body>
 </html>
